@@ -1,3 +1,7 @@
+2006-10-17  Chris Lumens  <clumens@redhat.com>
+
+	* pykickstart/writer.py:  Add writer for key command.
+
 2006-10-17  Jeremy Katz  <katzj@redhat.com>
 
 	* pykickstart.spec, setup.py: Bump version.
